Pari o dispari, esercizio completo
Pari o dispari, esercizio completo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-    <script src="pali.js"></script>
+     <!--Scelta pari o dispari-->
+    <p>Pari o Dispari</p>
+    <button id="pari">Numeri Pari</button>
+    <button id="dispari">Numeri Dispari</button>
+
+
+    <!--Inserimento del numero-->
+    <label for="numeroUtente"> Inserisci un numero da 1 a 5: </label>
+    <input type="number" id="numeroUtente" min="1" max="5">
+
+
+     <!--Pulsante per generare il numero-->
+     <button id="generaNumeri">Genera Numero</button>
+   
+    <!--<script src="pali.js"></script>-->
+    <script src="paridispa.js"></script>
 </body>
+
 </html>
